<resources>
    <string name="app_name">Quiz App</string>
    <string name="Q1">What is the sine?</string>
    <string name="Q1A1">opposite/hypotenuse</string>
    <string name="Q1A2">adjacent/hypotenuse</string>
    <string name="Q1A3">opposite/adjacent</string>
    <string name="Q1A4">hypotenuse/adjacent</string>
    <string name="Q2">What is the cosine?</string>
    <string name="Q2A1">opposite/hypotenuse</string>
    <string name="Q2A2">adjacent/hypotenuse</string>
    <string name="Q2A3">opposite/adjacent</string>
    <string name="Q2A4">hypotenuse/adjacent</string>
    <string name="Q3">What is the tangent?</string>
    <string name="Q3A1">opposite/hypotenuse</string>
    <string name="Q3A2">adjacent/hypotenuse</string>
    <string name="Q3A3">opposite/adjacent</string>
    <string name="Q3A4">sine/cosine</string>
    <string name="Q4">What is the secant?</string>
    <string name="Q4A1">opposite/hypotenuse</string>
    <string name="Q4A2">adjacent/hypotenuse</string>
    <string name="Q4A3">opposite/adjacent</string>
    <string name="Q4A4">hypotenuse/adjacent</string>
    <string name="Q5">What is the cosecant?</string>
    <string name="Q5A1">hypotenuse/opposite</string>
    <string name="Q5A2">adjacent/opposite</string>
    <string name="Q5A3">opposite/adjacent</string>
    <string name="Q5A4">hypotenuse/adjacent</string>
    <string name="Q6">What is the cotangent?</string>
    <string name="Q6A1">opposite/hypotenuse</string>
    <string name="Q6A2">adjacent/opposite</string>
    <string name="Q6A3">opposite/adjacent</string>
    <string name="Q6A4">hypotenuse/adjacent</string>
    <string name="Q7">What is the secant?</string>
    <string name="Q7A1">sine/cosine</string>
    <string name="Q7A2">cosine/sine</string>
    <string name="Q7A3">1/sine</string>
    <string name="Q7A4">1/cosine</string>
    <string name="Q8">What is the cosecant?</string>
    <string name="Q8A1">sine/cosine</string>
    <string name="Q8A2">cosine/sine</string>
    <string name="Q8A3">1/sine</string>
    <string name="Q8A4">1/cosine</string>
    <string name="Q9">What is the tangent?</string>
    <string name="Q9A1">sine/cosine</string>
    <string name="Q9A2">cosine/sine</string>
    <string name="Q9A3">1/sine</string>
    <string name="Q9A4">1/cosine</string>
    <string name="Q10">What is the cotangent?</string>
    <string name="Q10A1">sine/cosine</string>
    <string name="Q10A2">cosine/sine</string>
    <string name="Q10A3">1/sine</string>
    <string name="Q10A4">1/cosine</string>
</resources>
